fix: gap in navbar

--- a/css/painel.css
+++ b/css/painel.css
@@ -20,8 +20,9 @@ nav {
     width: 90%;
 }
 
-nav div a:last-child{
-    margin-left: 30px;
+nav div{
+    display: flex;
+    gap: 2em;
 }
 
 nav a:hover{
